Added about text and changed name value inside app.js

--- a/templates/views/about.hbs
+++ b/templates/views/about.hbs
@@ -14,6 +14,7 @@
 
   <div class="main-content">
     {{>header}}
+    <p>This web site was created by Nobu. It uses data from mapbox.com and darksky.net </p>
     <img class="portrait" src="/img/me.png" alt="">
   </div>
 
